--- a/assets/css/pages-css/index.css
+++ b/assets/css/pages-css/index.css
@@ -591,3 +591,17 @@ a {
   font-size: 20px;
   font-weight: bold;
 }
+
+
+.main-item {
+  display: block;
+  height: 200px;
+  width: 300px;
+}
+
+.product-item--show {
+  /* height: 40px; */
+  height: 100%;
+  width: 100%;
+  z-index: 100;
+}
